# django-todo-list

./: MANIFEST.in  README.md  pyproject.toml
src/todo/: models.py  urls.py  views.py
src/todo/migrations/: 0001_initial.py
src/todo/templates/todo/: create_todo.html  list_todos.html  todo_confirm_delete.html
test_site/static/css/: index.css
test_site/templates/: base.html
