[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_todo_list"
version = "0.0.1"
dependencies = [
  "tzdata",
  "django>=4.2",
]
requires-python = ">=3.9"
authors = [
  {name = "Charles Theall Jr", email = "charles.theall.jr@gmail.com"},
]
